--- a/a/index.html
+++ b/a/index.html
@@ -1,106 +1,393 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>css-3d旋转相册</title>
-		<link rel="stylesheet" href="css/hovertree.css" />
-	</head>
-	<body>
-		<div class="hovertreeinfo">
-			<h2 id="h2"></h2>
-		</div>
-		<!-- 仅自动播放音乐 -->
-		<!--<audio loop src="img/qianyuqianxun.mp3" id="audio" autoplay preload="auto">该浏览器不支持audio属性</audio>-->
-		<audio loop src="img\qianyuqianxun.mp3" id="audio" controls autoplay preload="auto">该浏览器不支持audio属性</audio>
-		<script type="text/javascript">
-		const h2 = document.getElementById("h2")
-		window.onload = function starttime() {
-            time(h2, '2020,9,16'); // 在一起的时间
-            ptimer = setTimeout(starttime, 1000); // 添加计时器
-        }
+<html lang="en">
 
-        function time(obj, futimg) {
-            var nowtime = new Date().getTime(); // 现在时间转换为时间戳
-            var futruetime = new Date(futimg).getTime(); // 未来时间转换为时间戳
-            var msec = nowtime - futruetime; // 毫秒 未来时间-现在时间
-            var time = (msec / 1000); // 毫秒/1000
-            var day = parseInt(time / 86400); // 天  24*60*60*1000 
-            var hour = parseInt(time / 3600) - 24 * day; // 小时 60*60 总小时数-过去的小时数=现在的小时数 
-            var minute = parseInt(time % 3600 / 60); // 分 -(day*24) 以60秒为一整份 取余 剩下秒数 秒数/60 就是分钟数
-            var second = parseInt(time % 60); // 以60秒为一整份 取余 剩下秒数
-            //              console.log(hour+":"+minute+":"+second)
-            //              alert(hour)
-            obj.innerHTML = "宝贝<br>我们在一起：<br>" + day + "天" + hour + "小时" + minute + "分" + second + "秒"
-            return true;
-        }
-		//--创建页面监听，等待微信端页面加载完毕 触发音频播放
-		document.addEventListener('DOMContentLoaded', function () {
-			function audioAutoPlay() {
-				var audio = document.getElementById('audio');
-					audio.play();
-				document.addEventListener("WeixinJSBridgeReady", function () {
-					audio.play();
-				}, false);
-			}
-			audioAutoPlay();
-		});
-		//--创建触摸监听，当浏览器打开页面时，触摸屏幕触发事件，进行音频播放
-		document.addEventListener('touchstart', function () {
-			function audioAutoPlay() {
-				var audio = document.getElementById('audio');
-					audio.play();
-			}
-			audioAutoPlay();
-		});
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>首页</title>
+    <!-- 引入初始化样式文件 -->
+    <link rel="stylesheet" href="css/base.css">
+    <!-- 引入公共样式 -->
+    <link rel="stylesheet" href="css/common.css">
+    <!-- 引入我们首页的index.css 文件 -->
+    <link rel="stylesheet" href="css/index.css">
+</head>
 
-		</script>
+<body>
+    <!-- 快捷导航模块 -->
+    <section class="shortcut">
+        <div class="w">
+            <div class="fl">
+                <ul>
+                    <!-- &nbsp;是空格 -->
+                    <li>评优购欢迎您!&nbsp;</li>
+                    <li>
+                        <a href="#">请登录&nbsp;</a>
+                        <a href="register.html" class="style_red">免费注册</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="fr">
+                <ul>
+                    <li>我的订单</li>
+                    <li></li>
+                    <li>我的品优购</li>
+                    <li></li>
+                    <li>品优购会员</li>
+                    <li></li>
+                    <li>企业采购</li>
+                    <li></li>
+                    <li class="arrow-icon">关注品优购</li>
+                    <li></li>
+                    <li class="arrow-icon">客户服务</li>
+                    <li></li>
+                    <li>网站服务</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- hearder头部开始 -->
+    <header class="header">
+        <!-- logo模块 -->
+        <div class="logo">
+            <h1><a href="index.html" title="品优购商城">品优购商城</a></h1>
+        </div>
+        <div class="search">
+            <input type="search" name="" id="" placeholder="语言开发">
+            <button>搜索</button>
+        </div>
+        <!-- hotwords模块制作 -->
 
-		<!--/*外层最大容器*/-->
-		<div class="wrap">
-			<!--	/*包裹所有元素的容器*/-->
-			<div class="cube">
-				<!--前面图片 -->
-				<div class="out_front">
-					<img src="img/img01.jpg " class="pic" />
-				</div>
-				<!--后面图片 -->
-				<div class="out_back">
-					<img src="img/img02.jpg" class="pic"/>
-				</div>
-				<!--左图片 -->
-				<div class="out_left">
-					<img src="img/img03.jpg" class="pic" />
-				</div>
-				<div class="out_right">
-					<img src="img/img04.jpg" class="pic" />
-				</div>
-				<div class="out_top">
-					<img src="img/img05.jpg" class="pic" />
-				</div>
-				<div class="out_bottom">
-					<img src="img/img06.jpg" class="pic" />
-				</div>
-				<!--小正方体 -->
-				<span class="in_front">
-					<img src="img/img07.jpg" class="in_pic" />
-				</span>
-				<span class="in_back">
-					<img src="img/img08.jpg" class="in_pic" />
-				</span>
-				<span class="in_left">
-					<img src="img/img09.jpg" class="in_pic" />
-				</span>
-				<span class="in_right">
-					<img src="img/img10.jpg" class="in_pic" />
-				</span>
-				<span class="in_top">
-					<img src="img/img11.jpg" class="in_pic" />
-				</span>
-				<span class="in_bottom">
-					<img src="img/img12.jpg" class="in_pic" />
-				</span>
-			</div>
-		</div>
+        <div class="hotwords">
+            <a href="#" class="style_red">优惠购首发</a>
+            <a href="#">亿元优惠</a>
+            <a href="#">9.9元团购</a>
+            <a href="#">每满99减30</a>
+            <a href="#">办公用品</a>
+            <a href="#">电脑</a>
+            <a href="#">通信</a>
+        </div>
+        <!-- 购物车制作 -->
+        <div class="shopcar">
+            <div class="car"></div>
+            我的购物车
+            <i class="count">8</i>
+        </div>
+    </header>
+    <!-- hearder 头部结尾 -->
 
-	</body>
+    <!-- nav模块开始 -->
+    <nav class="nav">
+        <div class="w">
+            <div class="dropdown">
+                <div class="dt">全部商品分类</div>
+                <div class="dd">
+                    <ul>
+                        <li><a href="#">家用电器</a></li>
+                        <li><a href="list.html">手机</a>、<a href="#">数码</a>、<a href="#">通信</a></li>
+                        <li> <a href="#">电脑、办公</a></li>
+                        <li> <a href="#">家居、家具、家装、厨具</a></li>
+                        <li><a href="#">男装、女装、童装、内衣</a></li>
+                        <li><a href="#">个户化妆、清洁用品、宠物</a></li>
+                        <li><a href="#">鞋靴、箱包、珠宝、奢侈品</a></li>
+                        <li><a href="#">运动户外、钟表</a></li>
+                        <li><a href="#">汽车、汽车用品</a></li>
+                        <li><a href="#">母婴、玩具乐器</a></li>
+                        <li><a href="#">食品、酒类、生鲜、特产</a></li>
+                        <li><a href="#">医药保健</a></li>
+                        <li><a href="#">图书、音像、电子书</a></li>
+                        <li><a href="#">彩票、旅行、充值、票务</a></li>
+                        <li> <a href="#">理财、众筹、白条、保险</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="navitems">
+                <ul>
+                    <li><a href="#">服装城</a></li>
+                    <li><a href="#">美妆馆</a></li>
+                    <li><a href="#">美妆馆</a></li>
+                    <li><a href="#">全球购</a></li>
+                    <li><a href="#">闪购</a></li>
+                    <li><a href="#">团购</a></li>
+                    <li><a href="#">拍卖</a></li>
+                    <li><a href="#">有趣</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- nav模块结束 -->
+    <!-- 首页专有的模块 main start-->
+    <div class="w">
+        <div class="main">
+            <div class="focus">
+                <ul>
+                    <li>
+                        <img src="upload/main_focus_03.png" alt="">
+                    </li>
+                </ul>
+            </div>
+            <div class="newsflash">
+                <div class="news">
+                    <div class="news-hd">
+                        <h5>品优购快报</h5>
+                        <a href="#" class="more">更多</a>
+                    </div>
+                    <div class="news-bd">
+                        <ul>
+                            <li><a href="#"><strong>[特惠]</strong>备战开学季全民半价购数码</a></li>
+                            <li><a href="#"><strong>[公告]</strong>品优稳占网购六成份额</a></li>
+                            <li><a href="#"><strong>[特惠]</strong>百元中秋全品类礼卷限量领</a></li>
+                            <li><a href="#"><strong>[公告]</strong>上品优生鲜 享阳澄湖大闸蟹</a></li>
+                            <li><a href="#"><strong>[特惠]</strong>每日享折扣品优品质游</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="lifeservice">
+                    <ul>
+                        <li>
+                            <i><img src="images/hf_03.png" alt=""></i>
+                            <p>话费</p>
+                        </li>
+                        <li><i><img src="images/plane_tickets_03.png" alt=""></i>
+                            <p>机票</p>
+                        </li>
+                        <li><i><img src="images/movie_03.png" alt=""></i>
+                            <p>电影票</p>
+                        </li>
+                        <li><i><img src="images/games_03.png" alt=""></i>
+                            <p>游戏</p>
+                        </li>
+                        <li><i><img src="images/caipiao_07.png" alt=""></i>
+                            <p>彩票</p>
+                        </li>
+                        <li><i><img src="images/addoil_10.png" alt=""></i>
+                            <p>加油卡</p>
+                        </li>
+                        <li><i><img src="images/hotel_10.png" alt=""></i>
+                            <p>酒店</p>
+                        </li>
+                        <li><i><img src="images/trail_16.png" alt=""></i>
+                            <p>火车票</p>
+                        </li>
+                        <li><i><img src="images/zhongchou_23.png" alt=""></i>
+                            <p>众筹</p>
+                        </li>
+                        <li><i><img src="images/licai_07.png" alt=""></i>
+                            <p>理财</p>
+                        </li>
+                        <li><i><img src="images/presents_07.png" alt=""></i>
+                            <p>礼品卡</p>
+                        </li>
+                        <li><i><img src="images/baitiao_10.png" alt=""></i>
+                            <p>白条</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="bargain">
+                    <img src="upload/news_margain_03.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 首页专有的模块 main end-->
+    <!-- 推荐模块 recommed-start-->
+    <div class="w recom">
+        <div class="recom_hd"><img src="images/recom_hd_19.png" alt=""></div>
+        <div class="recom_bd">
+            <ul>
+                <li><img src="upload/recom_bd4_05.png" alt=""></li>
+                <li><img src="upload/recom_bd3_03.png" alt=""></li>
+                <li><img src="upload/recom_bd2_03.png" alt=""></li>
+                <li><img src="upload/recom_bd1_03.png" alt=""></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- 楼层区域制作start -->
+    <div class="floor">
+        <!-- 1楼家用电器楼层 -->
+        <div class="w jiadian">
+            <div class="box_hd">
+                <h3>家用电器</h3>
+                <div class="table_list">
+                    <ul>
+                        <li><a href="#" class="style_red">热门</a>|</li>
+                        <li><a href="#">大家电</a>|</li>
+                        <li><a href="#">生活电器</a>|</li>
+                        <li><a href="#">厨房电器</a>|</li>
+                        <li><a href="#">个护健康</a>|</li>
+                        <li><a href="#">应季电器</a>|</li>
+                        <li><a href="#">空气/净水</a>|</li>
+                        <li><a href="#">新奇特</a>|</li>
+                        <li><a href="#">高端电器</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="box_bd">
+                <div class="tab_content">
+                    <div class="tab_list_item">
+                        <div class="col_210">
+                            <ul>
+                                <li>节能补贴</li>
+                                <li>4K电视</li>
+                                <li>空气进化器</li>
+                                <li>IH电饭煲</li>
+                                <li>滚筒洗衣机</li>
+                                <li>电热水器</li>
+                            </ul>
+                            <a href="#"><img src="upload/tab_bd-1_07.png" alt=""></a>
+                        </div>
+                        <div class="col_329">
+                            <a href="#"><img src="upload/tab_bd-2_07.png" alt=""></a>
+                        </div>
+                        <div class="col_221">
+                            <ul>
+                                <li>
+                                    <a href="#"><img src="upload/tab_bd-3(1)_07.png" alt=""></a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="upload/tab_bd-3(2)_07.png" alt=""></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col_221">
+                            <a href="#"><img src="upload/tab_bd-4_03.png" alt=""></a>
+                        </div>
+                        <div class="col_219">
+                            <ul>
+                                <li>
+                                    <a href="#"><img src="upload/tab_bd-5(1)_03.png" alt=""></a>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="upload/tab_bd5_03.png" alt=""></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 楼层区域制作end -->
+    <!-- 推荐模块recommed-end -->
+    <!-- 底部模块的制作 -->
+    <footer class="footer">
+        <div class="w">
+            <div class="mod_service">
+                <ul>
+                    <li class="mod_one">
+                        <h5></h5>
+                        <div>
+                            <h4>正品保障</h4>
+                            <p>正品保障，提供发票</p>
+                        </div>
+                    </li>
+                    <li class="mod_two">
+                        <h5></h5>
+                        <div>
+                            <h4>极速物流</h4>
+                            <p>急速物流，急速送达</p>
+                        </div>
+                    </li>
+                    <li class="mod_three">
+                        <h5></h5>
+                        <div>
+                            <h4>无忧售后</h4>
+                            <p>7天无理由退货</p>
+                        </div>
+                    </li>
+                    <li class="mod_four">
+                        <h5></h5>
+                        <div>
+                            <h4>特色服务</h4>
+                            <p>私人定制家庭套餐</p>
+                        </div>
+                    </li>
+                    <li class="mod_five">
+                        <h5></h5>
+                        <div>
+                            <h4>帮助中心</h4>
+                            <p>您的购物指南</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="mod_help">
+                <dl>
+                    <dt>服务指南</dt>
+                    <dd><a href="#">购物流程</a></dd>
+                    <dd><a href="#">会员介绍</a></dd>
+                    <dd><a href="#">生活旅行/团购</a></dd>
+                    <dd><a href="#">常见问题</a></dd>
+                    <dd><a href="#">大家电</a></dd>
+                    <dd><a href="#">联系客服</a></dd>
+                </dl>
+                <dl>
+                    <dt>配送方式</dt>
+                    <dd><a href="#">上门自提</a></dd>
+                    <dd><a href="#">211限时达</a></dd>
+                    <dd><a href="#">配送服务查询</a></dd>
+                    <dd><a href="#">配送费收取标准</a></dd>
+                    <dd><a href="#">海外配送</a></dd>
+                </dl>
+                <dl>
+                    <dt>支付方式</dt>
+                    <dd><a href="#">货到付款</a></dd>
+                    <dd><a href="#">在线支付</a></dd>
+                    <dd><a href="#">分期付款</a></dd>
+                    <dd><a href="#">邮局汇款/a></dd>
+                    <dd><a href="#">公司转账</a></dd>
+                </dl>
+                <dl>
+                    <dt>售后服务</dt>
+                    <dd><a href="#">售后政策</a></dd>
+                    <dd><a href="#">价格保护</a></dd>
+                    <dd><a href="#">退款说明</a></dd>
+                    <dd><a href="#">返修/退换货</a></dd>
+                    <dd><a href="#">取消订单</a></dd>
+                </dl>
+                <dl>
+                    <dt>特色服务</dt>
+                    <dd><a href="#">夺宝岛</a></dd>
+                    <dd><a href="#">DIY装机</a></dd>
+                    <dd><a href="#">延保服务</a></dd>
+                    <dd><a href="#">品优购E卡</a></dd>
+                    <dd><a href="#">品优购通信</a></dd>
+                </dl>
+                <dl>
+                    <dt>帮助中心</dt>
+                    <dd>
+                        <img src="images/mod_help.wx.png" alt=""> 品优购客户端
+                    </dd>
+                </dl>
+            </div>
+            <div class="mod_copyright">
+                <div class="links">
+
+                    <a href="#">关于我们</a>|
+                    <a href="#">联系我们</a>|
+                    <a href="#">联系客服</a>|
+                    <a href="#">商家入驻</a>|
+                    <a href="#">营销中心</a>|
+                    <a href="#">手机品优购</a>|
+                    <a href="#">友情链接</a>|
+                    <a href="#">销售联盟</a>|
+                    <a href="#">品优购社区</a>|
+                    <a href="#">品优购公益</a>|
+                    <a href="#">English Site</a>|
+                    <a href="#">Contact U</a>
+
+                </div>
+                <div class="copyright">
+                    地址：北京市昌平区建材城西路金燕龙办公楼一层 邮编：100096 电话：400-618-4000 传真：010-82935100 邮箱: zhanghj+itcast.cn
+                    <br>京ICP备08001421号京公网安备110108007702
+
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- 底部模块的结束 -->
+
 </html>
