--- a/b/QT.html
+++ b/b/QT.html
@@ -36,8 +36,8 @@
 <body>
     <h1 id="h1"></h1>
     <canvas></canvas>
-    
-    <script type="text/javascript">
+
+    <script>
         var canvas = document.querySelector("canvas"),
             ctx = canvas.getContext("2d");
 
@@ -168,6 +168,7 @@
             return true;
         }
     </script>
+
 </body>
 
 </html>
